cambios en vuelos, uso de bootstrap

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -202,7 +202,7 @@ footer {
 }
 
 .navbar {
-    background-color: var(--dark-color);
+    background-color: var(--primary-color);
     padding: 0.5rem 1rem;
     display: flex;
     justify-content: space-between;
