--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -41,7 +41,7 @@ main {
     padding: 0 1rem;
 }
 
-/* tabla de vuelos */
+/* tabla de vuelos index */
 .flight-status {
     background-color: white;
     border-radius: 8px;
